# $Id$

2005-08-24
	* More configure and makefile updates

2005-08-23
	* Added maximum_width

2005-08-22
	* Added $execibar and $execigraph

2005-08-21
	* Moved source into src/, moved docs into doc/
	* Updated makefiles

2005-08-20
	* Applied patch from zimba-tm, closes patch 1260225
	* Fixed ugly gradient bug.  closes bug 1255608
	* Added $voffset
	* Removed metar code.  It sucked.
	* Added $acpitempf for amooricans
	* $tail fixes

2005-08-12
	* Multiple unit additions and modifications

2005-08-07
	* mpd password patch from Joshua Gerrish
	* conky can run without X now, use --disable-x11 when configuring

2005-08-06
	* Conky 1.2 released

2005-08-05
	* small fixes
	* added CVS ebuild, huge thanks to Hopeless for this

2005-08-04
	* special thanks to Citizen_X and his patience
	* Citizen_X pwns
	* keep shakin' those big 'ol titties
	* Citizen_X
	* Citizen_X
	* Citizen_X
	* Citizen_X

2005-08-03
	* many small fixes, thanks to those who reported problems

2005-08-02
	* dramatically improved how conky handles fonts
	* fixed issues with graph args
	* fixed shades and outlines

2005-08-01
	* stabilized code
	* added gradients to graphs (very pretty)
	* things
	* added $font, yay
	* feature freeze; only bugfixes now

2005-07-30
	* finalized graphing code, see $cpugraph, $memgraph, $execgraph,
	$downspeedgraph, and $upspeedgraph
	* added override_utf8_locale option
	* poop
	* $tab patch from jack_mort on f.g.o

2005-07-28
	* Added new graphing code, such as $cpugraph
	* small fixes all round
	* stuff
	* things
	* added more mpd objects

2005-07-24
	* Conky now has UTF-8 support
	* Fixed $freq for those with CPU scaling
	* Fixed the problem with total_run_times
	* Fixed alignment of bars and lines and stuff
	* Reduced conky's memory usage (yay!)
	* Removed top_sort_cpu, added top_mem which sorts by mem usage instead
	of cpu

2005-07-17
	* Fixed a pile of bugs in configure script
	* Added proper checking for headers in configure script