@@ -358,8 +358,9 @@ VARIABLES
 
 
        downspeedgraph  net,  (height),(width)  (gradient  colour  1) (gradient
-       colour 2)
-	      Download speed graph, colours defined in hex, minus the #.
+       colour 2) (scale)
+	      Download	speed  graph,  colours defined in hex, minus the #. If
+	      scale is non-zero, it becomes the scale for the graph.
 
 
        else   Text to show if any of the above are not true
@@ -367,22 +368,22 @@ VARIABLES
 
        exec command
 	      Executes a shell command and displays the output in conky. warn-
-	      ing: this takes a lot more resources than other  variables.  I'd
+	      ing:  this  takes a lot more resources than other variables. I'd
 	      recommend coding wanted behaviour in C and posting a patch.
 
 
        execbar command
-	      Same  as	exec,  except  if  the	first  value return is a value
-	      between 0-100, it will use that number for a bar. The  size  for
+	      Same as exec, except if  the  first  value  return  is  a	 value
+	      between  0-100,  it will use that number for a bar. The size for
 	      the bar is currently fixed, but that may change in the future.
 
 
        execgraph command
-	      Same as execbar, but graphs values
+	      Same as execbar, but graphs values.
 
 
        execi interval command
-	      Same  as exec but with specific interval. Interval can't be less
+	      Same as exec but with specific interval. Interval can't be  less
 	      than update_interval in configuration.
 
 
@@ -405,7 +406,7 @@ VARIABLES
 
 
        fs_bar (height),(width) fs
-	      Bar that shows how much space is used on a file  system.	height
+	      Bar  that	 shows how much space is used on a file system. height
 	      is the height in pixels. fs is any file on that file system.
 
 
@@ -430,25 +431,25 @@ VARIABLES
 
 
        i2c (dev), type, n
-	      I2C  sensor  from	 sysfs	(Linux 2.6). dev may be omitted if you
-	      have only one I2C device. type is either	in  (or	 vol)  meaning
+	      I2C sensor from sysfs (Linux 2.6). dev may  be  omitted  if  you
+	      have  only  one  I2C  device. type is either in (or vol) meaning
 	      voltage, fan meaning fan or temp/tempf (first in C, second in F)
-	      meaning  temperature.  n	is   number   of   the	 sensor.   See
+	      meaning	temperature.   n   is	number	 of  the  sensor.  See
 	      /sys/bus/i2c/devices/ on your local computer.
 
 
        if_running (process)
-	      if  PROCESS  is  running,	 display everything if_running and the
+	      if PROCESS is running, display  everything  if_running  and  the
 	      matching $endif
 
 
        if_existing (file)
-	      if FILE exists, display everything between if_existing  and  the
+	      if  FILE	exists, display everything between if_existing and the
 	      matching $endif
 
 
        if_mounted (mountpoint)
-	      if  MOUNTPOINT is mounted, display everything between if_mounted
+	      if MOUNTPOINT is mounted, display everything between  if_mounted
 	      and the matching $endif
 
 
@@ -468,8 +469,8 @@ VARIABLES
 	      Machine, i686 for example
 
 
-       mails  Mail  count in mail spool. You can use program like fetchmail to
-	      get mails from some server using your  favourite	protocol.  See
+       mails  Mail count in mail spool. You can use program like fetchmail  to
+	      get  mails  from	some server using your favourite protocol. See
 	      also new_mails.
 
 
@@ -623,27 +624,27 @@ VARIABLES
 	      Move text over by N pixels. See also $voffset.
 
 
-       tail   logfile, lines interval> Displays last N lines of supplied  text
+       tail   logfile,	lines interval> Displays last N lines of supplied text
 	      text file. If interval is not supplied, Conky assumes 2x Conky's
 	      interval. Max of 30 lines. Max of 30 lines can be displayed.
 
 
        time (format)
-	      Local time, see man strftime to get more information about  for-
+	      Local  time, see man strftime to get more information about for-
 	      mat
 
 
        totaldown net
-	      Total  download, overflows at 4 GB on Linux with 32-bit arch and
-	      there doesn't seem to be a way to know how  many	times  it  has
+	      Total download, overflows at 4 GB on Linux with 32-bit arch  and
+	      there  doesn't  seem  to	be a way to know how many times it has
 	      already done that before conky has started.
 
 
        top type, num
-	      This  takes arguments in the form:top (name) (number) Basically,
-	      processes are ranked from highest to  lowest  in	terms  of  cpu
-	      usage,  which  is	 what (num) represents. The types are: "name",
-	      "pid", "cpu", and mem". There can	 be  a	max  of	 10  processes
+	      This takes arguments in the form:top (name) (number)  Basically,
+	      processes	 are  ranked  from  highest  to lowest in terms of cpu
+	      usage, which is what (num) represents. The  types	 are:  "name",
+	      "pid",  "cpu",  and  mem".  There	 can  be a max of 10 processes
 	      listed.
 
 
@@ -668,8 +669,9 @@ VARIABLES
 
 
        upspeedgraph net, (height),(width) (gradient colour 1) (gradient colour
-       2)
-	      Upload speed graph, colours defined in hex, minus the #.
+       2) (scale)
+	      Upload speed graph, colours defined in  hex,  minus  the	#.  If
+	      scale is non-zero, it becomes the scale for the graph.
 
 
        uptime Uptime
