@@ -173,10 +173,10 @@
 <varlistentry>
 	<term>
 		<command><option>downspeedgraph</option></command>
-		<option>net, (height),(width) (gradient colour 1) (gradient colour 2)</option>
+		<option>net, (height),(width) (gradient colour 1) (gradient colour 2) (scale)</option>
 	</term>
 	<listitem>
-		Download speed graph, colours defined in hex, minus the #.
+		Download speed graph, colours defined in hex, minus the #.  If scale is non-zero, it becomes the scale for the graph.
 	<para></para></listitem>
 </varlistentry>
 
@@ -215,7 +215,7 @@
 	<option>command</option>
 	</term>
 	<listitem>
-		Same as execbar, but graphs values
+		Same as execbar, but graphs values.
 	<para></para></listitem>
 </varlistentry>
 
@@ -865,10 +865,10 @@
 <varlistentry>
 	<term>
 		<command><option>upspeedgraph</option></command>
-		<option>net, (height),(width) (gradient colour 1) (gradient colour 2)</option>
+		<option>net, (height),(width) (gradient colour 1) (gradient colour 2) (scale)</option>
 	</term>
 	<listitem>
-		Upload speed graph, colours defined in hex, minus the #.
+		Upload speed graph, colours defined in hex, minus the #.  If scale is non-zero, it becomes the scale for the graph.
 	<para></para></listitem>
 </varlistentry>
 
