@@ -2,6 +2,7 @@
 
 2005-08-24
 	* More configure and makefile updates
+	* Added scale arg for net graphs
 
 2005-08-23
 	* Added maximum_width
